# bayesian-target

./: .gitignore  Makefile  README.md  dev-requirements.txt  exp-requirements.txt  pyproject.toml  requirements.txt  run_experiments.py  setup.cfg
.github/workflows/: edgetest.yml  publish-package.yml  test-package.yml
bayesian_target/: __init__.py  encoder.py  ensemble.py
bayte/: __init__.py  encoder.py  ensemble.py  plots.py  utility.py  utils.py
docs/: Makefile  conf.py  index.rst  refs.bib
docs/experiments/: index.rst
docs/experiments/classification/: churn.rst  click.rst
docs/experiments/regression/: avocado.rst  flight.rst  housing.rst  particulate.rst  salaries.rst  taxi.rst
docs/explanation/: algorithm.rst
docs/how-to/: encode.rst  estimate.rst
experiments/: __init__.py  flow.py
experiments/flows/: __init__.py  base.py  plots.py  samples.py
experiments/metadata/: ames-housing.json  avocado-sales.json  churn.json  click_prediction_small.json  employee_salaries.json  flight-delay-usa-dec-2017.json  medical_charges.json  nyc-taxi-green-dec-2016.json  particulate-matter-ukair-2017.json  wine-reviews.json
experiments/output/: compare.json  sample.json
experiments/tasks/: __init__.py  data.py  encode.py  io.py  model.py  plots.py  projects.py  scoring.py
tests/: conftest.py  test_encoder.py  test_ensemble.py  test_plots.py  test_utility.py  test_utils.py
