[metadata]
name = bayte
version = attr: bayte._meta.__version__
description = Bayesian target encoding with scikit-learn and scipy
long_description = file: README.md
long_description_content_type = text/markdown
author = Akshay Gupta
author_email = akgcodes@gmail.com
url = https://github.com/ak-gupta/bayte
python_requires = 
    >=3.7
license = MIT license
classifiers = 
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    pandas>=1.0.0,<=1.3.4
    scikit-learn>=1.0.0,<=1.0.1

[options.extras_require]
build =
    build
    bumpver
    twine
    wheel
docs = 
    furo
    myst-nb
    sphinx
    sphinxcontrib-bibtex
    sphinx-tabs
experiments =
    category_encoders==2.3.0
    prefect==0.15.10
plots =
    seaborn>=0.11.0,<=0.11.2
qa =
    black
    flake8
    mypy
    pip-tools
    pydocstyle
tests =
    pytest
    pytest-cov
complete =
    %(experiments)s
    %(plots)s
dev =
    %(build)s
    %(complete)s
    %(docs)s
    %(qa)s
    %(tests)s


[options.packages.find]
exclude =
    experiments
    experiments.*
    tests
    tests.*

[bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver:file_patterns]
setup.cfg = 
    current_version = "{version}"
bayte/_meta.py = 
    __version__ = "{version}"
docs/conf.py = 
    version = "{version}"

[flake8]
max-line-length = 100
ignore = E203,W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
allow_redefinition = True
