[metadata]
name = bayte
version = attr: bayte._meta.__version__
description = Bayesian target encoding with scikit-learn and scipy
long_description = file: README.md
long_description_content_type = text/markdown
author = Akshay Gupta
author_email = akgcodes@gmail.com
url = https://github.com/ak-gupta/bayte
python_requires = 
	>=3.8
license = { file = "LICENSE" }
classifiers = 
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	pandas<=2.2.2,>=1.0.0
	scikit-learn<=1.4.2,>=1.0.0

[options.extras_require]
build = 
	build
	bumpver
	twine
	wheel
docs = 
	furo
	myst-nb
	sphinx
	sphinxcontrib-bibtex
	sphinx-tabs
experiments = 
	category_encoders==2.3.0
	lazyscribe==0.3.0
	lightgbm==3.3.1
	seaborn<=0.13.2,>=0.11.0
	prefect==0.15.10
	xgboost==1.5.1
plots = 
	seaborn<=0.13.2,>=0.11.0
qa = 
	black
	flake8
	mypy
	pip-tools
	pydocstyle
tests = 
	pytest
	pytest-cov
dev = 
	build
	bumpver
	twine
	wheel
	seaborn<=0.13.2,>=0.11.0
	furo
	myst-nb
	sphinx
	sphinxcontrib-bibtex
	sphinx-tabs
	black
	flake8
	mypy
	pip-tools
	pydocstyle
	pytest
	pytest-cov

[options.packages.find]
exclude = 
	experiments
	experiments.*
	tests
	tests.*

[bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver:file_patterns]
setup.cfg = 
	current_version = "{version}"
bayte/_meta.py = 
	__version__ = "{version}"
docs/conf.py = 
	version = "{version}"

[flake8]
max-line-length = 100
ignore = E203,W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
allow_redefinition = True

[edgetest.envs.core]
python_version = 3.9
extras = 
	plots
	tests
command = 
	pytest tests
upgrade = 
	pandas
	scikit-learn
	seaborn

